--- a/responsive-nav.css
+++ b/responsive-nav.css
@@ -1,3 +1,24 @@
+*, body, html {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+header {
+    z-index: 9999;
+    position: relative;
+}
+
+.main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    height: 100vh;
+    padding: 30px;
+}
+
 /*
  ** Default mobile menu styles
 */
@@ -29,8 +50,8 @@ ul#mobile-menu li a {
     display: block;
     font-size: .875em;
     line-height: 2.75em;
-    text-transform: uppercase;
-    color: var(--c2);
+    text-decoration: none;
+    color: #000;
     padding: 0;
     margin-bottom: 14px;
     border-bottom: 1px solid #000;
@@ -100,11 +121,11 @@ ul#mobile-menu li.menu-item-has-children > ul.sub-menu li a {
 */
 
 button.hamburger {
-    width: 110px;
-    height: 100%;
+    width: 80px;
+    height: 80px;
     background-color: #000;
     border: none;
-    /* position: fixed; */
+    position: fixed;
     display: none;
     flex-direction: column;
     align-items: center;
@@ -112,6 +133,7 @@ button.hamburger {
     cursor: pointer;
     transition: ease .3s;
     padding: 5px;
+    right: 0;
 }
 
 button.hamburger:hover,
